@@ -1,3 +1,5 @@
+	- Added BenchmarkGeoIP.java (Frank Mather)
+
 1.1.8  August 18th 2006
 	- Increased FULL_RECORD_LENGTH from 50 to 60, fixes Array out ArrayOutOfBounds=50
 		for long city names in GeoIP City databases before July 2006
